# GeoAgent

./: .gitignore  .pre-commit-config.yaml  404.html  AGENT_IMPLEMENTATION.md  MAPLIBRE_UPDATE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-agents.txt  requirements.txt  requirements_dev.txt  sitemap.xml
.github/workflows/: docs-build.yml  docs.yml  installation.yml  macos.yml  pypi.yml  ubuntu.yml  windows.yml
agents/: index.html
analysis_agent/: index.html
catalogs/: index.html
changelog/: index.html
common/: index.html
context/: index.html
contributing/: index.html
data_agent/: index.html
decorators/: index.html
docs/: agents.md  catalogs.md  context.md  contributing.md  decorators.md  factory.md  geoagent.md  index.md  installation.md  llm.md  model.md  prompts.md  qgis-plugin.md  registry.md  result.md  safety.md  tools.md  ui.md  usage.md
docs/examples/: contextual_qa.ipynb  earth_science_queries.ipynb  event_monitoring.ipynb  gee_examples.ipynb  hitl_confirm.ipynb  intro.ipynb  live_mapping.ipynb  maplibre_viz.ipynb  openai_codex.ipynb  qgis_agent.ipynb  stac_search.ipynb  stac_workflow.ipynb
examples/: README.md  basic_usage.py  maplibre_usage.py  nasa_opera_qgis.py
examples/contextual_qa/: index.html
examples/custom_tools/: custom_tools.ipynb  index.html
examples/earth_science_queries/: earth_science_queries.ipynb  index.html
examples/event_monitoring/: index.html
examples/hitl_confirm/: index.html
examples/intro/: index.html  intro.ipynb
examples/live_mapping/: index.html  live_mapping.ipynb
examples/maplibre_viz/: index.html
examples/openai_codex/: index.html
examples/qgis_agent/: index.html
examples/stac_search/: index.html
examples/stac_workflow/: index.html
examples/stream_chat_openai_codex/: index.html  stream_chat_openai_codex.ipynb
factory/: index.html
faq/: index.html
geoagent/: __init__.py  cli.py  index.html
geoagent/agents/: __init__.py  analysis.py  context.py  coordinator.py  data.py  earthdata.py  geoai.py  mapping.py  planner.py  qgis.py
geoagent/catalogs/: __init__.py  registry.py
geoagent/core/: __init__.py  agent.py  analysis_agent.py  config.py  confirmation_hook.py  context.py  context_agent.py  data_agent.py  decorators.py  factory.py  gee_agent.py  llm.py  model.py  models.py  openai_codex.py  planner.py  prompts.py  registry.py  result.py  safety.py  viz_agent.py
geoagent/core/tools/: __init__.py  duckdb_tool.py  raster.py  stac.py  vector.py  viz.py
geoagent/testing/: __init__.py  _mocks.py
geoagent/tools/: __init__.py  _inline_executor.py  _map_state.py  _qt_marshal.py  anymap.py  earthengine.py  gee_data_catalogs.py  geoai.py  images.py  leafmap.py  nasa_earthdata.py  nasa_opera.py  qgis.py  stac.py  timelapse.py  vantor.py  whitebox.py
geoagent/tools/data/: __init__.py  duckdb.py  raster.py  vector.py  viz.py
geoagent/ui/: __init__.py  app.py  workspace.py
geoagent/ui/pages/: 00_home.py  01_chat.py
installation/: index.html
llm/: index.html
model/: index.html
models/: index.html
planner/: index.html
prompts/: index.html
qgis-plugin/: index.html
qgis_geoagent/: README.md  install.py  install.sh  package_plugin.py  package_plugin.sh
qgis_geoagent/open_geoagent/: __init__.py  deps_manager.py  metadata.txt  oauth.py  open_geoagent.py  uv_manager.py
qgis_geoagent/open_geoagent/dialogs/: __init__.py  chat_dock.py  settings_dock.py  update_checker.py
qgis_geoagent/tests/: __init__.py  conftest.py  test_chat_tool_inputs.py  test_pyqt6_imports.py  test_settings_diagnostics.py  test_startup_performance.py  test_voice_input.py  test_whitebox_integration.py
registry/: index.html
result/: index.html
safety/: index.html
scripts/: write_example_notebooks.py
search/: search_index.json
tests/: _fakes.py  test_anymap_tools.py  test_chat_e2e.py  test_confirm_callback.py  test_confirmation_hook.py  test_context.py  test_factory.py  test_gee_data_catalogs_tools.py  test_geo_tool.py  test_geoagent.py  test_geoagent_chat_mock.py  test_geoagent_factory.py  test_geoagent_surface.py  test_image_tools.py  test_inline_executor.py  test_leafmap_tools.py  test_map_state.py  test_mapping_search_then_add.py  test_model_providers.py  test_nasa_earthdata_tools.py  test_nasa_opera_tools.py  test_openai_codex_oauth.py  test_openai_oauth_helpers.py  test_qgis_import_safe.py  test_qgis_tools.py  test_qt_marshal.py  test_registry.py  test_safety.py  test_stac_tools.py  test_timelapse_tools.py  test_tool_thread_qgis.py  test_ui_app.py  test_vantor_tools.py  test_whitebox_tools.py
tools/: index.html
ui/: index.html
usage/: index.html
viz_agent/: index.html
