[project]
name = "GeoAgent"
version = "1.0.0"
description = "A centralized AI agent framework for Open Geospatial Python packages and QGIS plugins"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "GeoAgent",
    "geospatial",
    "AI",
    "agent",
    "STAC",
    "remote sensing",
    "earth observation",
    "QGIS",
    "leafmap",
    "anymap",
    "deepagents",
]
license = {text = "MIT License"}
authors = [
  {name = "Qiusheng Wu", email = "giswqs@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "deepagents>=0.5.3",
    "leafmap>=0.43",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
    "geopy>=2.4",
    "pyproj>=3.6",
    "xarray>=2024.1",
    "rioxarray>=0.17",
    "rasterio>=1.3",
    "geopandas>=1.0",
    "duckdb>=1.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "shapely>=2.0",
    "pydantic>=2.0",
]

[project.entry-points."console_scripts"]
geoagent = "geoagent.integrations.cli:main"

[project.optional-dependencies]
openai = [
    "langchain-openai>=1.0",
]

anthropic = [
    "langchain-anthropic>=1.4",
]

google = [
    "langchain-google-genai>=4.2",
]

ollama = [
    "langchain-ollama>=1.0",
]

llm = [
    "GeoAgent[openai,anthropic,google,ollama]",
]

anymap = [
    "anymap",
]

geoai = [
    "geoai",
]

earthengine = [
    "earthengine-api>=1.0",
]

nasa_earthdata = [
    "earthaccess>=0.10",
]

stac = [
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
]

ui = [
    "solara>=1.35",
]

# QGIS is environment-installed (system package), not pip; this extra is a marker.
qgis = []

all = [
    "GeoAgent[llm,anymap,geoai,earthengine,nasa_earthdata,ui]",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[tool]
[tool.setuptools.packages.find]
include = ["geoagent*"]
exclude = ["docs*", "tests*", "notebooks*", "examples*"]

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "geoagent/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 88
exclude = ["docs"]

[project.urls]
Homepage = "https://github.com/opengeos/GeoAgent"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
