[project]
name = "GeoAgent"
version = "1.0.0"
description = "Centralized AI agent framework for Open Geospatial Python packages and QGIS plugins (Strands Agents)"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "GeoAgent",
    "geospatial",
    "AI",
    "agent",
    "STAC",
    "remote sensing",
    "earth observation",
    "QGIS",
    "leafmap",
    "anymap",
    "strands-agents",
]
license = { text = "MIT License" }
authors = [
    { name = "Qiusheng Wu", email = "giswqs@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "strands-agents>=1.37",
    "pydantic>=2.0",
]

[project.entry-points."console_scripts"]
geoagent = "geoagent.cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
gemini = ["strands-agents[gemini]>=1.37", "google-genai>=1.0"]
ollama = ["ollama>=0.3"]
bedrock = []
leafmap = ["leafmap>=0.43"]
anymap = ["anymap"]
geoai = ["geoai"]
geemap = ["geemap"]
earthengine = ["earthengine-api>=1.0", "geemap"]
stac = ["pystac-client>=0.8", "planetary-computer>=1.0"]
earthdata = ["earthaccess>=0.10"]
ui = ["solara>=1.35"]
qgis = []
providers = ["GeoAgent[openai,anthropic,gemini,ollama]"]
all = [
    "GeoAgent[providers,leafmap,anymap,geoai,geemap,earthengine,stac,earthdata,ui]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
include = ["geoagent*"]
exclude = ["docs*", "tests*", "examples*"]

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "geoagent/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 88
exclude = ["docs"]

[project.urls]
Homepage = "https://github.com/opengeos/GeoAgent"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
